This stops drop-downs from being visible.

--- a/app/assets/stylesheets/_layout_style.css.scss
+++ b/app/assets/stylesheets/_layout_style.css.scss
@@ -223,7 +223,6 @@ body.bp {
 
   table.form {
     margin-bottom: 0;
-    display: block;
     overflow-x: scroll;
     td {
       vertical-align: top;
